# project-one

./: .dockerignore  .env.example  Dockerfile  compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  settings.py
app/api/: router.py
app/api/main/: router.py  services.py
src/: main.py  models.py  settings.py
src/routes/main/: router.py  services.py
