[project]
name = "project-one"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "gunicorn>=23.0.0",
    "orjson>=3.11.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn-worker>=0.4.0",
    "uvicorn[standard]>=0.37.0",
]

[tool.ruff]
line-length = 100
lint.select = ["ANN", "B", "A", "ICN", "LOG", "PIE", "SIM", "ARG", "I", "N", "E", "W", "F", "UP", "C4"]
lint.ignore = ["B008", "ANN201"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
